test/spec_vectors/elem/ok/module_17.wat
(module (table 0 0 funcref) (elem (i32.const 0)))