test/spec_vectors/elem/fail/module_59.wat
(module (table 1 funcref) (elem (i64.const 0)))